--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <link rel="stylesheet" href="style.css ">
 <body>
-  DDD
-  <i class="fas fa-store-alt-slash"></i>
+  <div class="quote-container" id="quote-container">
+    <!-- Quote  -->
+    <div class="quote-text">
+      <i class="fas fa-quote-left"></i>
+      <span id="quote">What you are is what you have been.</span>
+    </div>
+    <!-- Author -->
+    <div class="quote-author"><span id="author">Buddha</span>
+    </div>
+    <!-- Buttons -->
+    <div class="button-container">
+      <button class="twiiter-button" id="twitter" title="Tweet This!" >
+        <i class="fab fa-twitter"></i>
+      </button>
+      <button id="new-quote">
+        New Quote
+      </button>
+    </div>
+  </div>
+  <!-- <i class="fas fa-store-alt-slash"></i> -->
   <!--  Script -->
   <script src="script.js "></script>
 </body>
