Fetching Data With JavaScript

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <!-- Buttons -->
     <div class="button-container">
-      <button class="twiiter-button" id="twitter" title="Tweet This!" >
+      <button class="twiter-button" id="twitter" title="Tweet This!" >
         <i class="fab fa-twitter"></i>
       </button>
       <button id="new-quote">
@@ -31,6 +31,7 @@
   </div>
   <!-- <i class="fas fa-store-alt-slash"></i> -->
   <!--  Script -->
+  <script src="quotes.js "></script>
   <script src="script.js "></script>
 </body>
 </html>
