Creating A Loader With JavaScript

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     </div>
   </div>
   <!-- <i class="fas fa-store-alt-slash"></i> -->
+
+
+  <!-- Loader -->
+  <div class="loader" id="loader"></div>
+
+
   <!--  Script -->
   <script src="quotes.js "></script>
   <script src="script.js "></script>
