--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -14,7 +14,7 @@
 <!-- Title -->
 <h1>Unsplash API - Infinite Scroll</h1>
 <!--  Loader -->
-<div class="loader loader">
+<div class="loader" id="loader" hidden>
     <img src="loader.svg" alt="loading">
 </div>
     <!-- Script -->
