--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -17,6 +17,13 @@
 <div class="loader" id="loader" hidden>
     <img src="loader.svg" alt="loading">
 </div>
+
+<!-- Image Container -->
+<div class="image-container" id="image-container">
+    <img src="https://images.unsplash.com/photo-1645161231792-21377ba8f1e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1935&q=80" alt="image">
+    <img src="https://images.unsplash.com/photo-1645161231792-21377ba8f1e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1935&q=80" alt="image">
+    <img src="https://images.unsplash.com/photo-1645161231792-21377ba8f1e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1935&q=80" alt="image">
+</div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
