--- a/joke-teller/index.html
+++ b/joke-teller/index.html
@@ -12,7 +12,7 @@
     <button id="button">
       Tell Me A Joke
     </button>
-    <audio id="audio" controls></audio>
+<audio id="audio" controls hidden></audio>
   </div>
     <!-- Script -->
     <script src="script.js"></script>
